Refactor: Classe de usuário refatorada para uso correto do domain nos dtos e controller
Mudança nos códigos